--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,6 @@ services:
   - type: web
     name: webshop
     env: static
-    staticPublishPath: /
+    staticPublishPath: .
     buildCommand: "" # No build command needed for static files
     plan: free
